--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@reduxjs/toolkit": "^2.4.0",
     "@table-library/react-table-library": "^4.1.7",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
     "apexcharts": "^4.1.0",
     "framer-motion": "^11.12.0",
     "js-cookie": "^3.0.5",
@@ -27,8 +29,10 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^11.0.0",
+    "react-tsparticles": "^2.12.2",
     "redux-persist": "^6.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
